facts.html fix some spacing and rename breast image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -829,6 +829,8 @@ footer > span > a:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 15px;
 }
 
 .facts-box {
@@ -869,8 +871,8 @@ footer > span > a:hover {
   border: 3px solid gray;
   border-radius: 15px;
   background: rgba(238, 238, 238, 0.5);
-  width: 33%;
-  margin-left: 60%;
+  width: 45%;
+  margin-left: 53%;
   padding: 0.5em;
   margin-top: 40px;
   }
